[feat] User도메인 테스트 생성  - #75